aa-gateway/tests/snapshots/graph_vars_fixture_test__snapshot_null_ctx_agent_depth_fixture_requires_approval.snap
---
source: aa-gateway/tests/graph_vars_fixture_test.rs
expression: result
---
RequireApproval {
    reason: "approval required for tool 'deploy'",
    timeout_secs: 300,
}
