aa-gateway/tests/snapshots/graph_vars_fixture_test__snapshot_null_ctx_child_tool_deny_fixture_yields_allow.snap
---
source: aa-gateway/tests/graph_vars_fixture_test.rs
assertion_line: 188
expression: result
---
Allow
