aa-gateway/tests/snapshots/graph_vars_fixture_test__snapshot_null_ctx_team_active_agents_allow_fixture_yields_allow.snap
---
source: aa-gateway/tests/graph_vars_fixture_test.rs
assertion_line: 170
expression: result
---
Allow
