aa-gateway/tests/snapshots/graph_vars_fixture_test__snapshot_null_ctx_team_active_agents_fixture_requires_approval.snap
---
source: aa-gateway/tests/graph_vars_fixture_test.rs
expression: result
---
RequireApproval {
    reason: "approval required for tool 'spawn'",
    timeout_secs: 300,
}
