aa-gateway/tests/snapshots/graph_vars_fixture_test__snapshot_null_ctx_team_budget_remaining_fixture_requires_approval.snap
---
source: aa-gateway/tests/graph_vars_fixture_test.rs
expression: result
---
RequireApproval {
    reason: "approval required for tool 'expensive_op'",
    timeout_secs: 300,
}
