aa-gateway/tests/snapshots/graph_vars_fixture_test__snapshot_unconditional_deny_unaffected_by_null_ctx.snap
---
source: aa-gateway/tests/graph_vars_fixture_test.rs
assertion_line: 164
expression: result
---
Deny {
    reason: "tool denied by policy",
    source_scope: Global,
}
